Fixed strange space on the right on smaller devices

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -41,7 +41,7 @@ nav ul li a {
 }
 
 .navbar-fixed{
-    position: absolute!important;
+    position: fixed!important;
 }
 
 .fa-facebook,
